--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 </head>
 <body>
     <header class="headeracc">
-        <nav class="m-nav">
-            <a href="#" class="m-link">Acceuil</a>
-            <a href="#" class="m-link">recrutement</a>
-            <a href="#" class="m-link">contact</a>
-            </nav>
+        <ul class="navigation">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         <h1>Mystical Sanctuary</h1>
-        <p class="headerp">Une guild francophone</p>
+        <p class="headerp">Une guilde francophone</p>
 
     </header>
+
+    <section class="sec">
+        dAS
+    </section>
 
 </body>
 </html>
