--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
 <body>
     <header class="headeracc">
         <ul class="navigation">
-            <li><a href="#">Home</a></li>
+
+            <li><a href="https://taikuratw.github.io/MysticalSanctuary/">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="https://discord.gg/pR678zvrUp" target="_blank">Discord</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-        <h1>Mystical Sanctuary</h1>
-        <p class="headerp">Une guilde francophone</p>
-
     </header>
 
     <section class="sec">
-        test
+     
     </section>
-
 </body>
 </html>
