--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header class="headeracc">
         <ul class="navigation">
 
-            <li><a href="https://taikuratw.github.io/MysticalSanctuary/">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="https://taikuratw.github.io/MysticalSanctuary/">Acceuil</a></li>
+            <li><a href="#">à propos de</a></li>
             <li><a href="https://discord.gg/pR678zvrUp" target="_blank">Discord</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
     </header>
 
     <section class="sec">
-     
+        <h1>Bienvenue sur le site de la <span class="mysticsanct">Mystical Sanctuary</span></h1><br> <p> Mystical Sanctuary est une guilde francophone créée en 2022. Nous ne sommes pas là pour devenir la plus grande guilde du serveur, nous sommes là uniquement pour profiter.</p>
     </section>
 </body>
 </html>
