Fix menu and Adding custom fonts
Basalt font ttf

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section class="sec">
-        <h1>Bienvenue sur le site de la <span class="mysticsanct">Mystical Sanctuary</span></h1><br> <p> Mystical Sanctuary est une guilde francophone créée en 2022. Nous ne sommes pas là pour devenir la plus grande guilde du serveur, nous sommes là uniquement pour profiter.</p>
+        <h1>Bienvenue sur le site de la <span class="mysticsanct">Mystical Sanctuary</span></h1><br> <p> Mystical Sanctuary est une guilde francophone créée en 2022 par un groupe d'amis. Nous ne sommes pas là pour devenir la plus grande guilde du serveur, nous sommes là pour profiter du jeu, des quêtes et des guerres de guilde.</p>
     </section>
 </body>
 </html>
